TOC on iOS Fix Attempt 2
Sticky

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -107,7 +107,7 @@ body, input, textarea, select {
 }
 
 #links.affix {
-  position: fixed;
+  position: sticky;
   transform: translateZ(0);
 }
 
